--- a/ext/css/settings.css
+++ b/ext/css/settings.css
@@ -2047,9 +2047,34 @@ input.sentence-termination-character-input2 {
 .hotkey-list-item-action {
     flex: 1 1 auto;
 }
-.hotkey-list-item-enabled-label {
-    align-self: center;
-    margin-left: 1em;
+.hotkey-list-item-enabled-button-container {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: stretch;
+    margin-left: 0.375em;
+}
+button.hotkey-list-item-enabled-button {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: stretch;
+    width: auto;
+}
+button.hotkey-list-item-enabled-button[data-scope-count='0'] {
+    text-decoration: line-through;
+}
+.hotkey-list-item-enabled-button-label {
+    flex: 1 1 auto;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+}
+.hotkey-list-item-enabled-button-label>.checkbox {
+    margin-right: 0.5em;
+}
+.hotkey-list-item-action-argument {
+    margin-left: 0.375em;
+    flex: 1 1 auto;
+    visibility: hidden;
 }
 .hotkey-list-item-flex-row {
     display: flex;
@@ -2059,19 +2084,15 @@ input.sentence-termination-character-input2 {
 .hotkey-list-item-flex-row-label {
     margin: 0 0.5em 0 1em;
 }
-.hotkey-scope-checkbox-container {
+
+.hotkey-scope-popup-menu-item-label {
+    flex: 1 1 auto;
+    display: flex;
     flex-flow: row nowrap;
     align-items: center;
-    cursor: pointer;
 }
-.hotkey-scope-checkbox-container:not([hidden]) {
-    display: flex;
-}
-.hotkey-scope-checkbox-container:not(:last-child) {
-    margin-right: 0.75em;
-}
-.hotkey-scope-checkbox-container>span {
-    padding-left: 0.375em;
+.hotkey-scope-popup-menu-item-label>.checkbox {
+    margin-right: 0.5em;
 }
 
 .inline-icon {
