Toggle option hotkey (#1571)
* Set up toggleOption hotkey action settings

* Update styles

* Disable spell check and autocomplete

* Add OptionToggleHotkeyHandler

* Improve auto-close behaviour

--- a/ext/css/material.css
+++ b/ext/css/material.css
@@ -177,6 +177,15 @@
 }
 
 
+/* Text styles */
+.light {
+    color: var(--text-color-light2);
+}
+.danger-text {
+    color: var(--danger-color);
+}
+
+
 /* Icons */
 .icon {
     --icon-image: none;
