--- a/ext/css/settings.css
+++ b/ext/css/settings.css
@@ -2124,10 +2124,13 @@ button.hotkey-list-item-enabled-button[data-scope-count='0'] {
 .dictionary-list {
     width: 100%;
     display: grid;
-    grid-template-columns: auto 1fr auto auto;
+    grid-template-columns: auto auto 1fr auto auto;
     grid-template-rows: auto;
     place-items: center start;
     margin-top: 0.5em;
+}
+.dictionary-list-index {
+    margin-right: 0.5em;
 }
 .dictionary-list[data-count='0']>.dictionary-item-top {
     display: none;
