Improve overflow wrap (#1663)

--- a/ext/css/settings.css
+++ b/ext/css/settings.css
@@ -2310,8 +2310,8 @@ input[type=number].dictionary-priority {
 .no-wrap {
     white-space: nowrap;
 }
-.overflow-wrap-anywhere {
-    overflow-wrap: anywhere;
+.overflow-wrap {
+    word-break: break-all;
 }
 
 
