Sentence termination character mode (#1682)
* Change enableTerminationCharacters to terminationCharacterMode

* Update settings

* Update sentence extraction

* Update tests

* Add tests

--- a/ext/css/settings.css
+++ b/ext/css/settings.css
@@ -2249,6 +2249,9 @@ input[type=number].dictionary-priority {
     align-content: flex-start;
     justify-content: flex-start;
 }
+.horizontal-flex.horizontal-flex-nowrap {
+    flex-wrap: nowrap;
+}
 .horizontal-flex>* {
     margin-left: 0.375em;
 }
