Expose search query to anki template renderer (#1686)
* Expose query and fullQuery to Anki context

* Add {search-query} marker

* Update test data

* Update tests

* Wrap search query in multiLine

--- a/ext/data/templates/default-anki-field-templates.handlebars
+++ b/ext/data/templates/default-anki-field-templates.handlebars
@@ -372,4 +372,8 @@
     {{~/scope~}}
 {{/inline}}
 
+{{#*inline "search-query"}}
+    {{~#multiLine}}{{context.fullQuery}}{{/multiLine~}}
+{{/inline}}
+
 {{~> (lookup . "marker") ~}}
